crates/oxc_css_parser/tests/error/scss/at-rule/use/with-space-after-dollar.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `$var`, but found `<unknown>`
  ┌─ with-space-after-dollar.scss:1:20
  │
1 │ @use "other" with ($ a: b);
  │                    ^
